tests/NormalTests/paczka1/small_fuzzy/34541876.err
Error in line 2: 5l0NWJSp Sl1l 35,8
Error in line 5: ZKowq A722 82,1
Error in line 4: Z5r S569 54,0
Error in line 9: ZKowq A30 50,2
